# dandelion

./: .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  dev_requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
app/: api.py  config.py  db.py  main.py
app/auth/: views.py
app/classic/: router.py
app/classic/command/: service.py  views.py
app/classic/query/: service.py  views.py
app/common/: dependencies.py  exceptions.py  responses.py
app/common/database/: core.py  utils.py
app/common/template/: core.py  utils.py
app/common/utils/: models.py  sql_runner.py
app/core/: api.py  config.py  engine.py  templating.py
app/db/: engine.py  init.sql
app/dba/: auth.py  dto.py  models.py  repo.py  router.py  service.py  utils.py
app/dba/auth/: models.py  service.py  views.py
app/dba/data/: models.py  repository.py
app/dba/domain/: dtos.py  enums.py  (+3 more)
dandelion/: seed.sql
queries/: fill.sql  init.sql
queries/dba/: find_user.sql  get_all_tables.sql  get_private_table.sql  get_public_table.sql  get_role_permissions.sql  get_table.sql  get_table_attributes.sql  insert_table_metadata.sql  permissions_by_role.sql  table_columns.sql  table_exists.sql  tables.sql  user_by_username.sql
scripts/: gen-db-init.sh  generate_password_hash.py  run-mypy.sh
sql/: fill.sql  init.sql
sql/core/: schema.sql  seed.sql
sql/dandelion/: schema.sql  seed.sql
src/: database.py  schema.sql
templates/docs/: template_1.html  template_2.html
templates/web/: base.html  db-tables.html  dba-base.html  page-base.html
(+102 files in other folders)
