[project]
name = "dandelion"
version = "0.1.0"
description = "Centralized system for a policlynic"
requires-python = ">= 3.10"
dependencies = [
  "fastapi[standard]",
  "sqlalchemy",
  "asyncpg",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
]

[project.optional-dependencies]
dev = [
  "pip-tools",
  "pre-commit",
  "ruff",
  "mypy",
]
