[tool.setuptools]
py-modules = []

[project]
name = "dandelion"
version = "0.1.0"
description = "Centralized system for a policlynic"
requires-python = ">= 3.10"
dependencies = [
  "fastapi[standard]",
  "sqlalchemy",
  "psycopg",
  "psycopg[binary]",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "bcrypt",
  "pdfkit",
]

[project.optional-dependencies]
dev = [
  "pip-tools",
  "pre-commit",
  "ruff",
  "mypy",
]
